--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "inversify": "^6.0.1",
+    "inversify-react": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "reflect-metadata": "^0.1.13",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
