--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "inversify-react": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "reflect-metadata": "^0.1.13",
     "typescript": "^4.4.2",
